[metadata]
name = vyper-config
version = file: VERSION
author = Alexandre Ferland
author_email = me@alexferl.com
url = https://github.com/alexferl/vyper
description = Python configuration with (more) fangs
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Programming Language :: Python :: 3.11
  Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.8
install_requires =
  distconfig3>=1.0.1
  toml>=0.10.0
  PyYAML>=6.0.1
  watchdog>=3.0.0
